Fix text overlapping into other sections

--- a/scripts/Components/styles/home.css
+++ b/scripts/Components/styles/home.css
@@ -7,16 +7,16 @@ body {
 	margin: 0;
 }
 
-.rectangle-red {
-    background-color: #C96567
+#section-red {
+	background-color: #C96567
 }
 
-.rectangle-blue {
+#section-white {
+	background-color: white;
+}
+
+#section-blue {
 	background-color: #97AABD;
-}
-
-.rectangle-white{
-    background-color: white;
 }
 
 .heading {
@@ -27,7 +27,8 @@ body {
 	font-weight: 400;
 	font-size: 60px;
 	text-align: left;
-	padding-top: 1em;
+	padding-top: 2em;
+	padding-bottom: 1em;
 	padding-left: 1em;
 }
 
@@ -76,7 +77,15 @@ body {
   color: white;
 }
 
-.slogan {
+.horizontal-line {
+	width: 100%;
+	height: 0px;
+	border-color: #7a7a7a;
+	border-width: 1px;
+	border-style: solid;
+}
+
+.slogan-white {
 	height: 100px;
 	color: white;
 	font-family: 'Montserrat', sans-serif;
@@ -88,20 +97,16 @@ body {
 	padding: 1.5%;
 }
 
-.message {
-	text-align: center;
-}
-
-.slogan-description {
+.slogan-description-white {
 	height: 87px;
 	color: white;
 	font-family: 'Lora', serif;
-	font-size: 13px;
+	font-size: 15px;
 	text-align: center;
 }
 
 .slogan-black {
-	height: 100px;
+	height: 65px;
 	color: black;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 300;
@@ -109,52 +114,50 @@ body {
 	font-size: 40px;
 	letter-spacing: 2px;
 	text-align: center;
-	margin-top: 10px;
+	margin-top: 20px;
 }
+
 .slogan-description-black {
 	height: 87px;
 	color: black;
 	font-family: 'Lora', serif;
-	font-size: 13px;
+	font-size: 15px;
 	text-align: center;
 }
 
-.horizontal-line {
-	width: 100%;
-	height: 0px;
-	border-color: #7a7a7a;
-	border-width: 1px;
-	border-style: solid;
+.message {
+	text-align: center;
 }
 
-.section-1 {
-	width: 57px;
-	height: 29px;
-	color: black;
+.box {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 5px;
+  padding-bottom: 20px;
+}
+
+.box :first-child {
+    align-self: center;
+}
+
+.section-heading {
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 600;
 	text-transform: uppercase;
 	font-size: 25px;
 	letter-spacing: 1px;
-	text-align: left;
-	padding-left: 1em;
-}
-.section-1-description {
-	width: 100px;
-	height: 130px;
 	color: black;
-	font-family: 'Lora', serif;
-	font-size: 14px;
 	text-align: left;
-	padding-left: 3em;
+	padding-left: 30px;
 }
 
-.center {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-ms-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
+.section-description {
+	width: 100px;
+	padding-left: 40px;
+	color: black;
+	font-family: 'Lora', serif;
+	font-size: 12px;
+	text-align: left;
 }
 
 .feedback-button button {
@@ -184,6 +187,13 @@ body {
 		margin: 0.4em auto;
 	}
 }
+
+label {
+	color: white;
+	font-family: 'Lora', serif;
+	font-size: 18px;
+}
+
 .name-box {
 	padding-left: 25px;
     margin-left: auto;
